# bagel-sbsr

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANUAL.md  MODEL_CARD.md  NOTICE  README.md  RELEASE_NOTES.md  SAFETY.md  SECURITY.md  pyproject.toml  run.sh
.github/workflows/: ci.yml
comfyui/: nodes.py
configs/: eval.yaml  s1.yaml  s2.yaml  s3.yaml
demo/: app.py  requirements.txt
docs/: ARCH.md  DATA.md  EVAL.md  STATUS.md  TRAINING.md
papers/: preprint.tex
scripts/: coyo_dataloader.py  download_bagel.py  eval.py  install_bagel_src.sh  launch_full.sh  launch_runpod.py  saliency_provider.py  sanity_inference.py  train_s1.py  train_s2.py  train_s3.py
src/bagel_sbsr/: __init__.py  _env.py  hook.py  latent_saliency.py  pipeline_bagel_sbsr.py  saliency.py  sbsr.py
tests/: test_p1.py  test_sbsr.py  test_smoke.py
