[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "bagel-sbsr"
version = "0.1.0.dev0"
description = "BAGEL backbone with Saliency-biased Sparse Routing (SBSR) and iMF/DMD2 dual distillation for fast unified multimodal generation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10,<3.13"
authors = [{ name = "bagel-sbsr contributors" }]
keywords = [
  "diffusion",
  "flow-matching",
  "multimodal",
  "mixture-of-transformers",
  "rectified-flow",
  "mean-flow",
  "dmd2",
  "sparse-attention",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "torch>=2.5,<2.13",
  "torchvision>=0.20",
  "transformers>=4.46",
  "accelerate>=1.0",
  "peft>=0.13",
  "diffusers>=0.38.0",
  "huggingface_hub>=0.27",
  "safetensors>=0.8.0rc0",
  "einops>=0.8",
  "sentencepiece>=0.2",
  "tokenizers>=0.20",
  "Pillow>=10.4",
  "numpy>=1.26,<3",
  "tqdm>=4.66",
  "pyyaml>=6.0",
  "open_clip_torch>=2.30",
]

[project.optional-dependencies]
train = [
  "bitsandbytes>=0.44",
  "deepspeed>=0.15",
  "wandb>=0.18",
  "datasets>=3.1",
  "requests>=2.32",
  "runpod>=1.7",
]
eval = [
  "clean-fid>=0.1.35",
  "scipy>=1.13",
  "image-reward>=1.5",
]
distribution = [
  "gradio>=5.0",
]
dev = [
  "pytest>=8.3",
  "pytest-cov>=5",
  "ruff>=0.7",
  "mypy>=1.13",
]
all = [
  "bagel-sbsr[train,eval,distribution,dev]",
]

[project.urls]
Homepage = "https://github.com/hinanohart/bagel-sbsr"
Documentation = "https://github.com/hinanohart/bagel-sbsr#readme"
Repository = "https://github.com/hinanohart/bagel-sbsr"
Issues = "https://github.com/hinanohart/bagel-sbsr/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/bagel_sbsr"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "smoke: minimal sanity tests, no heavy compute",
  "slow: requires GPU or large download",
]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
ignore_missing_imports = true
